# labsentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
labsentinel/: __init__.py  cli.py  exceptions.py  runner.py  scoring.py  ui.py
labsentinel/checks/: __init__.py  agent_checks.py  auth_hardening.py  backup.py  exposure.py  firewall.py  guest_firewall.py  lan_exposure.py  network_segmentation.py  public_exposure.py  remote_exposure.py  service_hints.py  ssh.py
labsentinel/proxmox/: __init__.py  client.py  discovery.py
labsentinel_agent/: collect_facts.py
